--- a/helm-common/templates/_helpers.yaml
+++ b/helm-common/templates/_helpers.yaml
@@ -120,5 +120,5 @@ spec:
     matchNames:
       - {{ .Root.Values.namespace }}
   selector:
-    name: "niomon-{{ .name -}}-service"
+    name: "niomon-{{ .name }}-service"
 {{- end -}}
