build docker images with names like "ubirch/niomon-${subproject-name}"

--- a/helm-common/templates/_helpers.yaml
+++ b/helm-common/templates/_helpers.yaml
@@ -40,7 +40,7 @@ spec:
       serviceAccountName: {{ .serviceAccountName | default "default" }}
       containers:
       - name: "niomon-{{ .name }}-container"
-        image: "ubirch/{{ .name }}:{{ .Root.Values.image.tag | default "latest" }}"
+        image: "ubirch/niomon-{{ .name }}:{{ .Root.Values.image.tag | default "latest" }}"
         imagePullPolicy: Always
         ports:
         - containerPort: 8080
