--- a/pom.xml
+++ b/pom.xml
@@ -33,11 +33,40 @@
     </licenses>
 
     <name>common-files [${project.version}]</name>
-    <description>ubirch code project</description>
+    <description>ubirch common boilerplate files</description>
+    <url>https://ubirch.com/</url>
+
     <organization>
         <name>ubirch GmbH</name>
         <url>https://ubirch.com/</url>
     </organization>
+
+    <developers>
+        <developer>
+            <name>Mikołaj Robakowski</name>
+            <email>mikolaj.robakowski@ubirch.com</email>
+            <organization>ubirch GmbH</organization>
+            <organizationUrl>https://ubirch.com/</organizationUrl>
+        </developer>
+    </developers>
+
+    <scm>
+        <connection>scm:git:git://github.com/ubirch/niomon-${project.artifactId}.git</connection>
+        <developerConnection>scm:git:git@github.com:ubirch/niomon-${project.artifactId}.git</developerConnection>
+        <url>https://github.com/ubirch/niomon-${project.artifactId}</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <distributionManagement>
+        <snapshotRepository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+        </snapshotRepository>
+        <repository>
+            <id>ossrh</id>
+            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+        </repository>
+    </distributionManagement>
 
     <build>
         <plugins>
@@ -72,15 +101,19 @@
                     </execution>
                 </executions>
             </plugin>
-            <!-- for mvn deploy to work, disable the default deploy plugin -->
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-deploy-plugin</artifactId>
-                <version>2.8.2</version>
-                <configuration>
-                    <skip>true</skip>
-                </configuration>
-            </plugin>
         </plugins>
     </build>
+
+    <repositories>
+        <repository>
+            <id>snapshots-repo</id>
+            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
+            <releases>
+                <enabled>false</enabled>
+            </releases>
+            <snapshots>
+                <enabled>true</enabled>
+            </snapshots>
+        </repository>
+    </repositories>
 </project>
