fix prometheus monitors

--- a/helm-common/templates/_helpers.yaml
+++ b/helm-common/templates/_helpers.yaml
@@ -120,5 +120,7 @@ spec:
     matchNames:
       - {{ .Root.Values.namespace }}
   selector:
-    name: "niomon-{{ .name }}-service"
+    matchLabels:
+      app: niomon
+      component: {{ .name }}
 {{- end -}}
