--- a/helm-common/templates/_helpers.yaml
+++ b/helm-common/templates/_helpers.yaml
@@ -51,12 +51,7 @@ spec:
           containerPort: {{ .port }}
         {{- end }}
         resources:
-          requests:
-            cpu: 0.5
-            memory: 0.3Gi
-          limits:
-            cpu: 1
-            memory: 0.5Gi
+          {{- toYaml .Root.Values.resources | nindent 10 }}
         readinessProbe:
           tcpSocket:
             port: {{ .readinessPort | default 9010 }}
