--- a/helm-common/values.prod.yaml
+++ b/helm-common/values.prod.yaml
@@ -28,3 +28,11 @@ ingress:
     - secretName: niomon-prod-ubirch-com-certificate
       hosts:
         - niomon.prod.ubirch.com
+
+resources:
+  requests:
+    cpu: 0.5
+    memory: 0.3Gi
+  limits:
+    cpu: 1
+    memory: 0.5Gi
