--- a/pom.xml
+++ b/pom.xml
@@ -40,6 +40,10 @@
         <name>ubirch GmbH</name>
         <url>https://ubirch.com/</url>
     </organization>
+    <properties>
+        <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+    </properties>
 
     <developers>
         <developer>
@@ -72,6 +76,7 @@
         <plugins>
             <plugin>
                 <artifactId>maven-resources-plugin</artifactId>
+                <version>${maven-resources-plugin.version}</version>
                 <executions>
                     <execution>
                         <id>copy-common-helm-files</id>
