--- a/helm-common/values.demo.yaml
+++ b/helm-common/values.demo.yaml
@@ -7,7 +7,7 @@ image:
 # settings for ingest
 keyServiceURL: "key-service-core-demo.core-demo.svc.cluster.local:8095"
 kafkaURL: "kafka.core-demo.svc.cluster.local:9092"
-redisSecretName: "redis-secrets"
+redisSecretName: "redis-secrets-avatar"
 serverUuid: "9d3c78ff-22f3-4441-a5d1-85c636d486ff"
 
 redis:
@@ -19,7 +19,7 @@ ingress:
   annotations:
     certmanager.k8s.io/acme-challenge-type: "dns01"
     certmanager.k8s.io/cluster-issuer: "letsencrypt-demo"
-    certmanager.k8s.io/acme-dns01-provider: "demo-dns"
+    certmanager.k8s.io/acme-dns01-provider: "demo-dns-demo-ubirch-com"
     kubernetes.io/ingress.allow-http: "false"
   path: /
   hosts:
