--- a/root-common/Dockerfile
+++ b/root-common/Dockerfile
@@ -20,6 +20,7 @@ ENTRYPOINT [ \
   "-c", \
   "exec /usr/bin/java \
    -XX:MaxRAM=$(( $(cat /sys/fs/cgroup/memory/memory.limit_in_bytes) - 254*1024*1024 )) \
+   $([ -n \"$JAVA_MAX_RAM\" ] && echo \"-XX:MaxRAM=$JAVA_MAX_RAM\") \
    -Djava.awt.headless=true \
    -Djava.security.egd=file:/dev/./urandom \
    -Djava.rmi.server.hostname=localhost \
