--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
         <url>https://ubirch.com/</url>
     </organization>
     <properties>
+        <build.number>devbuild</build.number>
         <maven-resources-plugin.version>3.1.0</maven-resources-plugin.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
