--- a/helm-charts/_commons/values.prod.yaml
+++ b/helm-charts/_commons/values.prod.yaml
@@ -33,4 +33,28 @@ resources:
   requests:
     memory: 0.3Gi
   limits:
-    memory: 0.5Gi
+    memory: 1Gi
+
+# settings for individual services
+auth:
+  replicas: 2
+  ubirchAuthUrl: "https://api.console.prod.ubirch.com/ubirch-web-ui/api/v1/auth"
+
+decoder:
+  replicas: 1
+
+enricher:
+  replicas: 2
+  ubirchDeviceInfoUrl: https://api.console.prod.ubirch.com/ubirch-web-ui/api/v1/auth/deviceInfo
+
+http:
+  replicas: 3
+
+responder:
+  replicas: 1
+
+signer:
+  replicas: 2
+
+verifier:
+  replicas: 2
